# shorty

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.client  Dockerfile.server  LICENSE  README.md  docker-compose.yml  rust-toolchain.toml
.github/workflows/: docker-publish.yml
.kuber/: client-config.yaml  client.yaml  persistence.yaml  redis-config.yaml  redis-master.yaml  redis-replica.yaml  redis.yaml  server-config.yaml  server-secret.yaml  server.yaml
client/: Cargo.toml  README.md  build.rs
client/src/: app.rs  args.rs  intercept.rs  lib.rs  main.rs  short.rs  state.rs
client/style/: main.scss
proto/: shorty.proto
scripts/: setup_hosts.sh
server/: Cargo.toml  README.md  build.rs
server/src/: db.rs  intercept.rs  lib.rs  main.rs  shorty.rs
src/: app.rs  db.rs  env.rs  lib.rs  main.rs  short.rs  state.rs
