[workspace]
resolver = "2"
members = ["client", "server"]

[workspace.package]
authors = ["Mikołaj Rosowski <m.rosowski@wp.pl>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
eyre = "0.6.12"
prost = "0.12.4"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.11.0"
tonic-build = "0.11.0"
tracing = "0.1"
tracing-subscriber = "0.3.18"
url = { version = "2.5.0", features = ["serde"] }
