[package]
name = "client"
authors.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost.workspace = true
tokio.workspace = true
tonic.workspace = true

[build-dependencies]
tonic-build.workspace = true
