[package]
name = "server"
authors.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
eyre.workspace = true
prost.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

bb8 = "0.8.3"
bb8-redis = "0.15.0"
once_cell = "1.19.0"
rand_xoshiro = "0.6.0"
redis = "0.25.3"
rand = "0.8.5"

[build-dependencies]
tonic-build.workspace = true
